# utwutwb

./: LICENSE  README.md  pyproject.toml  utwutwb.code-workspace
benchmarks/: benchmark.py
tests/: test_wut.py
tests/fixtures/: e2e.yaml
utwutwb/: __init__.py  box.py  condition.py  constants.py  container.py  context.py  id_ops.py  index.py  optimize.py  parse.py  plan.py  set_ops.py  store.py  wut.py
